<resources>
    <string name="unsupported_android_version">DistroHopper does not support this version of Android.</string>
    <string name="action_settings">Settings</string>
    <string name="dash_search_hint">Search</string>
    <string name="dash_lens_apps_title">Applications</string>
    <string name="dash_lens_other_title">Other</string>
    <string name="profile_personal">Personal</string>
    <string name="profile_work">Work</string>
    <string name="profile_private">Private</string>
    <string name="profile_clone">Clone</string>
    <string name="profile_other">Profile</string>
    <string name="lens_profile_section">%1$s (%2$s)</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="shortcut_label_distrohopper_settings">DistroHopper Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_lens_preferences">Search sources</string>
    <string name="title_activity_local_files_folders">Folders to search</string>
    <string name="title_activity_theme_preferences">Themes</string>
    <string name="title_activity_dev_logs">Logs</string>
    <string name="lens_preferences_settings">Search source settings</string>
    <string name="local_files_folders_add">Add folder</string>
    <string name="local_files_folders_empty">Add a folder to be able to search its contents.</string>
    <string name="local_files_folders_remove">Remove folder</string>
    <string name="developed_by">Developed by Robin Jacobs</string>
    <string name="about_description">I started DistroHopper back in high school as a (far too) young Linux enthusiast who wanted something resembling the Linux desktop on his first smartphone. I hope 15+ years later of on-and-off development you still enjoy what I started back then :)</string>
    <string name="about_get_involved">Get involved</string>
    <string name="about_github_title">Contribute on GitHub</string>
    <string name="about_github_subtitle">Browse the code, report issues, and collaborate</string>
    <string name="about_transifex_title">Help translate</string>
    <string name="about_transifex_subtitle">Help translate DistroHopper into your language</string>
    <string name="about_github_url" translatable="false">https://github.com/RobinJ1995/DistroHopper</string>
    <string name="about_transifex_url" translatable="false">https://explore.transifex.com/distrohopper/</string>
    <string name="about_legal">Legal</string>
    <string name="about_licenses_title">Open source licences</string>
    <string name="about_licenses_subtitle">Licences of the fonts and code DistroHopper is built on</string>
    <string name="about_privacy_title">Privacy policy</string>
    <string name="about_privacy_subtitle">What DistroHopper collects, and what it doesn\'t</string>
    <string name="about_privacy_url" translatable="false">https://github.com/RobinJ1995/DistroHopper/blob/master/PRIVACY.md</string>
    <string name="about_copyright">Copyright © 2012–%1$s Robin Jacobs</string>
    <string name="about_gpl_notice">DistroHopper is free software: you can redistribute it and/or modify it under the terms of the GNU General Public Licence as published by the Free Software Foundation, either version 3 of the Licence, or (at your option) any later version. It comes with ABSOLUTELY NO WARRANTY. The source code is available on GitHub.</string>
    <string name="title_activity_licenses">Open source licences</string>
    <string name="licenses_intro">DistroHopper itself is licensed under the GNU General Public Licence v3. It also bundles the fonts and code listed below, each under its own licence. Tap an entry to read the full licence text.</string>
    <string name="licenses_entry_license">Licensed under %1$s</string>
    <string name="licenses_read_error">The licence text could not be loaded. You can also read it in the source repository on GitHub.</string>
    <string name="button_back">Back</string>
    <string name="button_about">About</string>
    <string name="button_apply">Apply</string>
    <string-array name="edges">
        <item>Hide</item>
        <item>Top</item>
        <item>Right</item>
        <item>Bottom</item>
        <item>Left</item>
    </string-array>
    <string name="title_preferences">Preferences</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_launcher">Launcher</string>
    <string name="pref_header_dash">Dash</string>
    <string name="pref_header_panel">Panel</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_header_dev">Developer options</string>
    <string name="pref_header_functionality">Functionality</string>
    <string name="pref_header_gestures">Gestures</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="option_launchericon_size">Pinned icon size</string>
    <string name="customise_hint_launcher_icon_size">Larger icons mean fewer fit without scrolling.</string>
    <string name="launcher_icon_hint">%1$s · %2$d icons fit</string>
    <string-array name="launcher_icon_presets">
        <item>Tiny</item>
        <item>Small</item>
        <item>Default</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>
    <string name="customise_option_dash_grid_size">Grid size</string>
    <string name="customise_hint_dash_grid_size">Larger grid means smaller icons.</string>
    <string name="dash_grid_hint">%1$d × %2$d</string>
    <string name="pref_header_desktop">Desktop</string>
    <string name="customise_option_desktop_grid_size">Grid size</string>
    <string name="customise_hint_desktop_grid_size">Larger grid means smaller cells. Changing it rearranges items that no longer fit.</string>
    <string name="customise_option_screen_edge">Screen edge</string>
    <string name="option_launcher_menu_button">Menu button</string>
    <string name="customise_menu_button_hide">Hide</string>
    <string name="customise_menu_button_start">Start</string>
    <string name="customise_menu_button_end">End</string>
    <string name="widget_picker_title">Add widget</string>
    <string name="widget_no_room">There is no room left on the home screen for this widget.</string>
    <string name="desktop_menu_widgets">Widgets</string>
    <string name="desktop_menu_settings">Settings</string>
    <string name="option_dashsearch_focus_on_open">Start search when Dash opened</string>
    <string name="hint_dashsearch_focus_on_open">Focus the search box and show the keyboard when the dash is opened.</string>
    <string name="option_dev_log_toaster">Log toasts</string>
    <string name="hint_dev_log_toaster">Show log items in toast messages.</string>
    <string name="option_customise">Customise</string>
    <string name="hint_customise">Customise the look and feel.</string>
    <string name="customise_done">Done</string>
    <string name="option_wallpaper">Wallpaper</string>
    <string name="hint_wallpaper">Change wallpaper</string>
    <string name="option_lenses">Search sources</string>
    <string name="hint_lenses">Choose which source searches you want to use and in which order you want their results to appear in the Dash. When you do a search in the Dash, your query is sent to all enabled lenses and their results are shown.</string>
    <string name="option_theme">Theme</string>
    <string name="hint_theme">Choose which Linux distribution you want DistroHopper to look like.</string>
    <string name="option_icon_pack">Icon pack</string>
    <string name="hint_icon_pack">Choose a third-party icon pack to apply to app icons.</string>
    <string name="option_icon_pack_none">None</string>
    <string name="option_icon_shape">Icon shape</string>
    <string name="hint_icon_shape">Mask adaptive icons to a consistent shape.</string>
    <string name="icon_shape_system">System default</string>
    <string name="icon_shape_circle">Circle</string>
    <string name="icon_shape_squircle">Squircle</string>
    <string name="icon_shape_rounded_square">Rounded square</string>
    <string name="icon_shape_square">Square</string>
    <string name="option_tinted_icons">Tinted icons</string>
    <string name="hint_tinted_icons">Recolour app icons that provide a monochrome version to a single colour.</string>
    <string name="option_icon_tint">Colour</string>
    <string name="tint_wallpaper">Wallpaper</string>
    <string name="tint_accent">Accent</string>
    <string name="tint_theme">Theme</string>
    <string name="option_icons">Icons</string>
    <string name="hint_icons">Shape, icon pack and tint.</string>
    <string name="title_activity_icon_preferences">Icons</string>
    <string name="pref_section_adaptive_icons">Adaptive icons</string>
    <string name="hint_adaptive_icons">These settings only affect apps that ship an adaptive icon; other icons are left unchanged.</string>
    <string name="pref_section_icon_packs">Icon packs</string>
    <string name="option_font">Font</string>
    <string name="hint_font">Choose the font used for text throughout DistroHopper.</string>
    <string name="font_system">System default</string>
    <string name="option_dev_logs">Logs</string>
    <string name="option_clear_cache">Clear cache</string>
    <string name="option_widget_resize_any">Allow unsupported widget dimensions</string>
    <string name="hint_widget_resize_any">Allow widgets to be resized beyond their supported size constraints.</string>
    <string name="option_gesture_swipe_sides">Swipe left or right</string>
    <string name="hint_gesture_swipe_sides">Switches between desktops.</string>
    <string name="option_gesture_swipe_up">Swipe up</string>
    <string name="option_gesture_swipe_down">Swipe down</string>
    <string name="option_enable_notification_gestures">Enable open notifications tray gestures</string>
    <string name="hint_enable_notification_gestures">A system accessibility service needs to be enabled in order for this to work.</string>
    <string name="option_launcherservice_enabled">Floating launcher</string>
    <string name="hint_launcherservice_enabled">Pull the launcher out from the screen edge while you\'re in another app. Needs permission to draw over other apps.</string>
    <string name="option_launcherservice_zone">Pull out from</string>
    <string name="option_launcherservice_sensitivity">Gesture sensitivity</string>
    <string name="gesture_setup_explain_title">Notification tray gesture setup</string>
    <string name="gesture_setup_explain_body">Android doesn\'t give ordinary apps any way to open the notification tray. For a home screen like DistroHopper, the only mechanism available is an accessibility service.\n\nDistroHopper\'s accessibility service needs to be enabled for that reason alone. It only opens the notification tray. It does not read what\'s on your screen, collect any data, or perform any other action.</string>
    <string name="gesture_setup_guide_title">Turn on the service</string>
    <string name="gesture_setup_guide_body">Find DistroHopper in the accessibility settings list and switch it on, then come back here.</string>
    <string name="gesture_setup_cancel">Cancel</string>
    <string name="gesture_setup_proceed">I understand, proceed</string>
    <string name="gesture_setup_open_settings">Open accessibility settings</string>
    <string name="option_rerun_onboarding">Run setup wizard again</string>
    <string name="hint_rerun_onboarding">The first-run setup wizard will be shown the next time DistroHopper starts.</string>
    <string name="onboarding_default_launcher_title">Make it home</string>
    <string name="onboarding_default_launcher_body">Set DistroHopper as your home screen, so that it appears whenever you press the home button.</string>
    <string name="onboarding_default_launcher_already">✓ DistroHopper is your home screen</string>
    <string name="onboarding_button_set_default">Set as home screen</string>
</resources>