<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/option_theme"
        android:summary="@string/hint_theme">
        <intent
            android:targetPackage="be.robinj.distrohopper"
            android:targetClass="be.robinj.distrohopper.preferences.ThemePreferencesActivity" />
    </Preference>

    <Preference
        android:key="dummy_wallpaper"
        android:title="@string/option_wallpaper"
        android:summary="@string/hint_wallpaper">
    </Preference>

    <ListPreference
        android:key="icon_pack"
        android:title="@string/option_icon_pack"
        android:summary="@string/hint_icon_pack"
        android:defaultValue=""/>

    <CheckBoxPreference
        android:key="launch_animation"
        android:title="@string/option_launch_animation"
        android:summary="@string/hint_launch_animation"
        android:defaultValue="true" />

    <Preference
        android:key="dummy_customise"
        android:title="@string/option_customise"
        android:summary="@string/hint_customise">
    </Preference>

</PreferenceScreen>
