<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<Preference
		android:dependency="dev"
		android:title="@string/option_dev_logs">
		<intent
			android:targetClass="be.robinj.distrohopper.dev.DevLogsActivity"
			android:targetPackage="be.robinj.distrohopper" />
	</Preference>

	<SwitchPreferenceCompat
		android:key="dev_log_toaster"
		android:dependency="dev"
		android:title="@string/option_dev_log_toaster"
		android:summary="@string/hint_dev_log_toaster"
		android:defaultValue="false" />

	<Preference
		android:key="dummy_clear_cache"
		android:dependency="dev"
		android:title="@string/option_clear_cache" />

	<SwitchPreferenceCompat
		android:key="dev_widget_resize_any"
		android:dependency="dev"
		android:title="@string/option_widget_resize_any"
		android:summary="@string/hint_widget_resize_any"
		android:defaultValue="false" />

	<Preference
		android:key="dummy_rerun_onboarding"
		android:dependency="dev"
		android:title="@string/option_rerun_onboarding"
		android:summary="@string/hint_rerun_onboarding" />

	<Preference
		android:key="dummy_pin_default_apps"
		android:dependency="dev"
		android:title="@string/option_pin_default_apps"
		android:summary="@string/hint_pin_default_apps" />

	<!--<CheckBoxPreference
		android:key="launcher_running_show"
		android:dependency="dev"
		android:title="@string/option_launcher_running_show"
		android:summary="@string/hint_launcher_running_show"
		android:defaultValue="false" />-->

	<!--<CheckBoxPreference
		android:key="launcherservice_enabled"
		android:title="@string/option_launcherservice_enabled"
		android:summary="@string/hint_launcherservice_enabled"
		android:dependency="dev"
		android:defaultValue="false" />

	-->

</PreferenceScreen>
